[package]
name = "edgeless-rearend-rust"
version = "0.1.0"
authors = ["Cno <dsyourshy@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
derive_more = "0.99"
regex = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textcode = "0.2"
redux-rs = "0.1"
cached = "0.23"
chrono = "0.4"
